# microb

./: .gitignore  CMakeLists.txt  README.md
include/microb/: window.h
src/: component.c  component.h  luart.c  luart.h  text.c  text.h  utils.c  utils.h  window.c
tests/non-automated/: hello-world.c  hello.c
